Bug 1924702 - Lower a bit WCAG min contrast ratio for white foreground. r=ayeddi
With the current WCAG algorithm, we end up choosing suboptimal colors
for accent colors like Breeze's (which is a common style in Linux).

Breeze accent color is #3daee9. System UI uses white on top of it. Its
contrast with white is 2.49 (WCAG-wise), so we fall back to a darkened
color, which gets a much better WCAG ratio, but not so great visual
result.

Realistically we do want to use white for this color, it does look a lot
better and it does get more (perceptual) contrast that the color we come
up with which is rgb(0, 47, 86).

Lower the threshold a little bit. We should experiment with using APCA
or so for this calculation (for which black and white get very similar
contrast ratios for this accent color), but for now this doesn't cause
illegible checkboxes in https://accent-color.glitch.me/, and seems like
a net improvement for these "in-between" kinds of colors.

Differential Revision: https://phabricator.services.mozilla.com/D225635

UltraBlame original commit: ba2cec2237d62e0e573a29f4a3ba44b96c4dd940

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -55250,11 +55250,9 @@ between
 the
 accent
 color
-foreground
-and
 background
-#
-colors
+and
+white
 .
 #
 #
@@ -55292,6 +55290,108 @@ is
 3
 :
 1
+.
+#
+#
+However
+that
+causes
+some
+colors
+that
+are
+realistically
+fine
+to
+get
+darkened
+#
+so
+we
+lower
+it
+a
+little
+bit
+.
+Eventually
+we
+should
+maybe
+use
+something
+like
+#
+APCA
+or
+so
+perhaps
+see
+:
+#
+#
+*
+https
+:
+/
+/
+ruitina
+.
+com
+/
+apca
+-
+accessible
+-
+colour
+-
+contrast
+/
+#
+*
+https
+:
+/
+/
+github
+.
+com
+/
+w3c
+/
+csswg
+-
+drafts
+/
+issues
+/
+7937
+#
+#
+See
+also
+:
+#
+#
+*
+https
+:
+/
+/
+accent
+-
+color
+.
+glitch
+.
+me
+/
+#
+#
+For
+testing
+this
+.
 -
 name
 :
@@ -55313,9 +55413,9 @@ type
 AtomicFloat
 value
 :
-3
+2
 .
-0
+4
 mirror
 :
 always
