Bug 1925786 - Add targetApi annotations to various autofill functions. r=android-reviewers,mcarare
Needed for lint failures such as:
Error: <org.mozilla.fenix.autofill.AutofillUnlockActivity> requires API level 26 (current min is 21) [NewApi]

Differential Revision: https://phabricator.services.mozilla.com/D226231

UltraBlame original commit: a94afd2d39a5380ed43df0507f2527ef6d71bf22

--- a/mobile/android/android-components/samples/browser/src/main/AndroidManifest.xml
+++ b/mobile/android/android-components/samples/browser/src/main/AndroidManifest.xml
@@ -1279,6 +1279,13 @@ autofill
 .
 AutofillUnlockActivity
 "
+tools
+:
+targetApi
+=
+"
+o
+"
 android
 :
 exported
@@ -1315,6 +1322,13 @@ autofill
 .
 AutofillConfirmActivity
 "
+tools
+:
+targetApi
+=
+"
+o
+"
 android
 :
 exported
@@ -1349,6 +1363,13 @@ autofill
 .
 AutofillSearchActivity
 "
+tools
+:
+targetApi
+=
+"
+o
+"
 android
 :
 exported
@@ -1369,6 +1390,13 @@ name
 autofill
 .
 AutofillService
+"
+tools
+:
+targetApi
+=
+"
+o
 "
 android
 :
