--- a/mobile/android/fenix/app/src/main/AndroidManifest.xml
+++ b/mobile/android/fenix/app/src/main/AndroidManifest.xml
@@ -2912,6 +2912,13 @@ autofill
 .
 AutofillUnlockActivity
 "
+tools
+:
+targetApi
+=
+"
+o
+"
 android
 :
 exported
@@ -2946,6 +2953,13 @@ autofill
 .
 AutofillConfirmActivity
 "
+tools
+:
+targetApi
+=
+"
+o
+"
 android
 :
 exported
@@ -2979,6 +2993,13 @@ name
 autofill
 .
 AutofillSearchActivity
+"
+tools
+:
+targetApi
+=
+"
+o
 "
 android
 :
@@ -3030,6 +3051,13 @@ name
 autofill
 .
 AutofillService
+"
+tools
+:
+targetApi
+=
+"
+o
 "
 android
 :
