Bug 1917685 - Merge minidump-analyzer into the crash reporter client r=gsvelto,fluent-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D225234

UltraBlame original commit: bb90d095b8b8317e435b663f2fec99139216be66

--- a/toolkit/crashreporter/minidump-analyzer/Cargo.toml
+++ b/toolkit/crashreporter/minidump-analyzer/Cargo.toml
@@ -73,18 +73,6 @@ edition
 2021
 "
 [
-[
-bin
-]
-]
-name
-=
-"
-minidump
--
-analyzer
-"
-[
 dependencies
 ]
 anyhow
@@ -114,54 +102,6 @@ symbols
 .
 22
 "
-clap
-=
-{
-version
-=
-"
-4
-"
-default
--
-features
-=
-false
-features
-=
-[
-"
-std
-"
-"
-cargo
-"
-"
-wrap_help
-"
-"
-derive
-"
-]
-}
-env_logger
-=
-{
-version
-=
-"
-0
-.
-10
-.
-0
-"
-default
--
-features
-=
-false
-}
 futures
 -
 executor
@@ -319,3 +259,53 @@ Win32_Storage_FileSystem
 Win32_UI_WindowsAndMessaging
 "
 ]
+[
+dev
+-
+dependencies
+]
+crash
+-
+handler
+=
+"
+0
+.
+6
+"
+minidumper
+=
+"
+0
+.
+8
+"
+json
+=
+"
+0
+.
+12
+.
+4
+"
+sadness
+-
+generator
+=
+"
+0
+.
+5
+.
+0
+"
+tempfile
+=
+"
+3
+.
+3
+.
+0
+"
