Bug 1925386 - Put Marionette tests in treeherder group Mn. r=releng-reviewers,bhearsum
Differential Revision: https://phabricator.services.mozilla.com/D226323

UltraBlame original commit: 4fb5d50bc7f6bb5576736a88c841723125414ff9

--- a/taskcluster/config.yml
+++ b/taskcluster/config.yml
@@ -1983,6 +1983,42 @@ os
 integration
 '
 '
+Mn
+'
+:
+'
+Marionette
+tests
+'
+'
+Mn
+-
+swr
+'
+:
+'
+Marionette
+tests
+with
+software
+webrender
+enabled
+'
+'
+Mn
+-
+headless
+'
+:
+'
+Marionette
+tests
+running
+in
+headless
+mode
+'
+'
 MSI
 '
 :
