Bug 1917300 - create common input element test helpers r=reusable-components-reviewers,mstriemer
This patch factors out some common elements of our moz-checkbox and moz-radio tests into helpers that can be re-used and extended for future input element tests.

Differential Revision: https://phabricator.services.mozilla.com/D222341

UltraBlame original commit: 355963d4e13a21454ffda65f2edc6395d1c1cf4b

--- a/toolkit/content/tests/widgets/chrome.toml
+++ b/toolkit/content/tests/widgets/chrome.toml
@@ -45,6 +45,15 @@ seek_with_sound
 .
 webm
 "
+"
+input
+-
+test
+-
+helpers
+.
+js
+"
 ]
 prefs
 =
@@ -226,6 +235,13 @@ html
 [
 "
 test_moz_page_nav
+.
+html
+"
+]
+[
+"
+test_moz_radio
 .
 html
 "
