Bug 1922570 - Show global actions on seperate row from heuristic. r=daisuke,desktop-theme-reviewers,urlbar-reviewers,dao
Differential Revision: https://phabricator.services.mozilla.com/D225051

UltraBlame original commit: ba16cea2ed41efb892287a8442e490e5507fc9a8

--- a/browser/components/urlbar/metrics.yaml
+++ b/browser/components/urlbar/metrics.yaml
@@ -1511,6 +1511,7 @@ possible
 types
 are
 :
+action
 addon
 autofill_about
 autofill_adaptive
@@ -1938,6 +1939,7 @@ possible
 types
 are
 :
+action
 addon
 autofill_about
 autofill_adaptive
