Backed out changeset bb90d095b8b8 (bug 1917685) for causing xpc failures  test_crash_exc_guard / test_crash_service CLOSED TREE
UltraBlame original commit: 046fa34bf048b9fdfd28cdb19edd9ca58b9e7040

--- a/taskcluster/config.yml
+++ b/taskcluster/config.yml
@@ -10358,6 +10358,17 @@ Contents
 /
 MacOS
 /
+minidump
+-
+analyzer
+"
+-
+"
+/
+Contents
+/
+MacOS
+/
 nmhproxy
 "
 -
@@ -10671,6 +10682,17 @@ Contents
 MacOS
 /
 pingsender
+"
+-
+"
+/
+Contents
+/
+MacOS
+/
+minidump
+-
+analyzer
 "
 -
 "
