--- a/browser/installer/package-manifest.in
+++ b/browser/installer/package-manifest.in
@@ -2298,6 +2298,24 @@ endif
 endif
 ;
 [
+minidump
+-
+analyzer
+]
+;
+#
+ifdef
+MOZ_CRASHREPORTER
+BINPATH
+/
+minidump
+-
+analyzer
+BIN_SUFFIX
+#
+endif
+;
+[
 Ping
 Sender
 ]
