--- a/toolkit/crashreporter/minidump-analyzer/Cargo.toml
+++ b/toolkit/crashreporter/minidump-analyzer/Cargo.toml
@@ -73,6 +73,18 @@ edition
 2021
 "
 [
+[
+bin
+]
+]
+name
+=
+"
+minidump
+-
+analyzer
+"
+[
 dependencies
 ]
 anyhow
@@ -102,6 +114,54 @@ symbols
 .
 22
 "
+clap
+=
+{
+version
+=
+"
+4
+"
+default
+-
+features
+=
+false
+features
+=
+[
+"
+std
+"
+"
+cargo
+"
+"
+wrap_help
+"
+"
+derive
+"
+]
+}
+env_logger
+=
+{
+version
+=
+"
+0
+.
+10
+.
+0
+"
+default
+-
+features
+=
+false
+}
 futures
 -
 executor
@@ -259,53 +319,3 @@ Win32_Storage_FileSystem
 Win32_UI_WindowsAndMessaging
 "
 ]
-[
-dev
--
-dependencies
-]
-crash
--
-handler
-=
-"
-0
-.
-6
-"
-minidumper
-=
-"
-0
-.
-8
-"
-json
-=
-"
-0
-.
-12
-.
-4
-"
-sadness
--
-generator
-=
-"
-0
-.
-5
-.
-0
-"
-tempfile
-=
-"
-3
-.
-3
-.
-0
-"
