--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -96554,6 +96554,65 @@ value
 mirror
 :
 always
+#
+The
+number
+of
+entries
+in
+the
+certificate
+trust
+cache
+.
+#
+A
+higher
+number
+increases
+memory
+usage
+but
+should
+increase
+the
+cache
+hit
+rate
+.
+#
+Each
+entry
+is
+approximately
+65
+bytes
+and
+the
+maximum
+number
+of
+entries
+is
+65535
+.
+-
+name
+:
+security
+.
+pki
+.
+cert_trust_cache_size
+type
+:
+RelaxedAtomicUint32
+value
+:
+128
+mirror
+:
+always
 -
 name
 :
