Bug 1922537 - Match video playback latency recording configuration to match other browsertime tests. r=sparky
Switch to only using ffmpeg to record on Windows like browsertime-tp6,
browsertime-responsiveness, etc. This will unblock testing for Firefox
on new OSX as well as being more consistent with how we have configured
other browsertest test suites.

Differential Revision: https://phabricator.services.mozilla.com/D225807

UltraBlame original commit: cb7b0e609825fdc1bb0bca62c0da8e3e708890a5

--- a/taskcluster/kinds/test/browsertime-desktop.yml
+++ b/taskcluster/kinds/test/browsertime-desktop.yml
@@ -5444,6 +5444,27 @@ extra
 -
 options
 :
+by
+-
+test
+-
+platform
+:
+windows
+.
+*
+-
+64
+.
+*
+shippable
+.
+*
+-
+qr
+.
+*
+:
 -
 -
 -
@@ -5456,6 +5477,20 @@ browsertime
 no
 -
 ffwindowrecorder
+-
+-
+-
+extra
+-
+profiler
+-
+run
+default
+:
+-
+-
+-
+chimera
 -
 -
 -
