Bug 1920821 - Enable mitmproxy 11.0.0 on Windows/MacOS r=perftest-reviewers,sparky
This patch enables performance pageload tests to now use mitmproxy
11.0.0, only on the Mac/Windows platform.
This will run on a subset of tests as the binary doesn't properly run on
old recordings (e.g. mitm 6) but seems to run fine on recordings mitm7
and greater.

Additionally, the mitmproxy version for android is bumped from 10 -> 11.
Although 10.x.x was only recently landed, 11 was released shortly after
so we might as well keep all platforms on the same version where
possible.

Differential Revision: https://phabricator.services.mozilla.com/D224383

UltraBlame original commit: 48ee1eb36afa4fe852f3297779348735054003e4

--- a/testing/raptor/raptor/tests/interactive/browsertime-responsiveness.toml
+++ b/testing/raptor/raptor/tests/interactive/browsertime-responsiveness.toml
@@ -137,12 +137,19 @@ ALIAS
 )
 .
 [
-"
 cnn
 -
 nav
-"
 ]
+playback_version
+=
+"
+11
+.
+0
+.
+0
+"
 browser_cycles
 =
 10
@@ -309,11 +316,9 @@ com
 /
 "
 [
-"
 facebook
 -
 nav
-"
 ]
 browser_cycles
 =
@@ -551,13 +556,11 @@ facebook
 com
 "
 [
-"
 reddit
 -
 billgates
 -
 ama
-"
 ]
 page_timeout
 =
@@ -766,7 +769,6 @@ com
 /
 "
 [
-"
 reddit
 -
 billgates
@@ -774,7 +776,6 @@ billgates
 post
 -
 1
-"
 ]
 browser_cycles
 =
@@ -1060,7 +1061,6 @@ thisisbillgates
 /
 "
 [
-"
 reddit
 -
 billgates
@@ -1068,7 +1068,6 @@ billgates
 post
 -
 2
-"
 ]
 browser_cycles
 =
