--- a/testing/raptor/raptor/tests/tp6/desktop/browsertime-tp6.toml
+++ b/testing/raptor/raptor/tests/tp6/desktop/browsertime-tp6.toml
@@ -74,11 +74,11 @@ manifest
 playback_version
 =
 "
-8
+11
 .
-1
+0
 .
-1
+0
 "
 type
 =
@@ -111,9 +111,7 @@ in
 alphabetical
 order
 [
-"
 amazon
-"
 ]
 playback_pageset_manifest
 =
@@ -210,11 +208,9 @@ sr
 3
 "
 [
-"
 bing
 -
 search
-"
 ]
 playback_pageset_manifest
 =
@@ -253,9 +249,7 @@ barack
 obama
 "
 [
-"
 buzzfeed
-"
 ]
 benchmark_page
 =
@@ -290,9 +284,7 @@ com
 /
 "
 [
-"
 cnn
-"
 ]
 playback_pageset_manifest
 =
@@ -360,9 +352,7 @@ index
 html
 "
 [
-"
 ebay
-"
 ]
 playback_pageset_manifest
 =
@@ -407,9 +397,7 @@ com
 /
 "
 [
-"
 espn
-"
 ]
 benchmark_page
 =
@@ -475,9 +463,7 @@ draft
 news
 "
 [
-"
 expedia
-"
 ]
 playback_pageset_manifest
 =
@@ -582,10 +568,17 @@ adults
 2
 "
 [
-"
 facebook
-"
 ]
+playback_version
+=
+"
+8
+.
+1
+.
+1
+"
 playback_pageset_manifest
 =
 "
@@ -633,9 +626,7 @@ facebook
 com
 "
 [
-"
 fandom
-"
 ]
 benchmark_page
 =
@@ -693,11 +684,9 @@ its
 playerbase
 "
 [
-"
 google
 -
 docs
-"
 ]
 playback_pageset_manifest
 =
@@ -768,11 +757,9 @@ usp
 sharing
 "
 [
-"
 google
 -
 mail
-"
 ]
 benchmark_page
 =
@@ -807,11 +794,9 @@ com
 /
 "
 [
-"
 google
 -
 search
-"
 ]
 playback_pageset_manifest
 =
@@ -858,11 +843,9 @@ cad
 h
 "
 [
-"
 google
 -
 slides
-"
 ]
 benchmark_page
 =
@@ -947,9 +930,7 @@ usp
 sharing
 "
 [
-"
 imdb
-"
 ]
 playback_pageset_manifest
 =
@@ -1011,9 +992,7 @@ ref_
 tt_ov_epl
 "
 [
-"
 imgur
-"
 ]
 benchmark_page
 =
@@ -1123,9 +1102,7 @@ gallery
 uTI7fKy
 "
 [
-"
 instagram
-"
 ]
 playback_pageset_manifest
 =
@@ -1171,10 +1148,17 @@ com
 /
 "
 [
-"
 linkedin
-"
 ]
+playback_version
+=
+"
+8
+.
+1
+.
+1
+"
 playback_pageset_manifest
 =
 "
@@ -1229,9 +1213,7 @@ feed
 /
 "
 [
-"
 microsoft
-"
 ]
 playback_pageset_manifest
 =
@@ -1282,10 +1264,17 @@ us
 /
 "
 [
-"
 netflix
-"
 ]
+playback_version
+=
+"
+8
+.
+1
+.
+1
+"
 playback_pageset_manifest
 =
 "
@@ -1334,9 +1323,7 @@ title
 80117263
 "
 [
-"
 nytimes
-"
 ]
 secondary_url
 =
@@ -1387,9 +1374,7 @@ bill
 html
 "
 [
-"
 office
-"
 ]
 secondary_url
 =
@@ -1427,9 +1412,7 @@ auth
 1
 "
 [
-"
 outlook
-"
 ]
 playback_pageset_manifest
 =
@@ -1462,9 +1445,7 @@ mail
 inbox
 "
 [
-"
 paypal
-"
 ]
 playback_pageset_manifest
 =
@@ -1498,10 +1479,17 @@ summary
 /
 "
 [
-"
 pinterest
-"
 ]
+playback_version
+=
+"
+8
+.
+1
+.
+1
+"
 benchmark_page
 =
 false
@@ -1563,9 +1551,7 @@ com
 /
 "
 [
-"
 reddit
-"
 ]
 benchmark_page
 =
@@ -1626,10 +1612,17 @@ we_posed_as_100_senators_to_run_ads_on_facebook
 /
 "
 [
-"
 tumblr
-"
 ]
+playback_version
+=
+"
+8
+.
+1
+.
+1
+"
 playback_pageset_manifest
 =
 "
@@ -1682,9 +1675,7 @@ com
 dashboard
 "
 [
-"
 twitch
-"
 ]
 measure
 =
@@ -1815,9 +1806,7 @@ true
 '
 ]
 [
-"
 twitter
-"
 ]
 benchmark_page
 =
@@ -1849,9 +1838,7 @@ com
 BarackObama
 "
 [
-"
 wikia
-"
 ]
 benchmark_page
 =
@@ -1891,9 +1878,7 @@ wiki
 Black_Panther
 "
 [
-"
 wikipedia
-"
 ]
 secondary_url
 =
@@ -1930,11 +1915,9 @@ wiki
 Barack_Obama
 "
 [
-"
 yahoo
 -
 mail
-"
 ]
 benchmark_page
 =
@@ -1969,9 +1952,7 @@ com
 /
 "
 [
-"
 youtube
-"
 ]
 secondary_url
 =
