--- a/taskcluster/kinds/toolchain/misc.yml
+++ b/taskcluster/kinds/toolchain/misc.yml
@@ -1698,6 +1698,8 @@ toolchain
 win64
 -
 vs2022
+-
+car
 browsertime
 :
 description
@@ -2638,6 +2640,101 @@ x86_64
 linux
 -
 gnu
+win64
+-
+vs2022
+-
+car
+:
+description
+:
+"
+VS
+2022
+toolchain
+with
+SDK
+10
+.
+0
+.
+26100
+.
+x
+for
+CaR
+builds
+"
+attributes
+:
+local
+-
+toolchain
+:
+true
+treeherder
+:
+symbol
+:
+TW64
+(
+msvc2022
+-
+car
+)
+worker
+:
+env
+:
+MACH_BUILD_PYTHON_NATIVE_PACKAGE_SOURCE
+:
+system
+run
+:
+script
+:
+get_vs
+.
+py
+arguments
+:
+-
+build
+/
+vs
+/
+vs2022
+-
+car
+.
+yaml
+resources
+:
+-
+build
+/
+vs
+/
+vs2022
+-
+car
+.
+yaml
+toolchain
+-
+artifact
+:
+project
+/
+gecko
+/
+vs
+/
+vs
+.
+tar
+.
+zst
 win64
 -
 vs2022
