--- a/browser/base/content/test/performance/browser.toml
+++ b/browser/base/content/test/performance/browser.toml
@@ -714,29 +714,27 @@ if
 =
 [
 "
-win11_2009
-&
-&
-bits
-=
-=
-32
+true
 "
 ]
 #
-#
+Bug
+1926118
+:
 Disabled
-on
-Win32
-because
-of
-intermittent
-OOM
-failures
-(
-bug
-1448241
-)
+until
+the
+test
+can
+be
+revisited
+to
+measure
+performance
+under
+representative
+conditions
+.
 [
 "
 browser_urlbar_search
@@ -750,77 +748,27 @@ if
 =
 [
 "
-os
-=
-=
-'
-linux
-'
-&
-&
-(
-debug
-|
-|
-ccov
-)
-"
-#
-Disabled
-on
-Linux
-debug
-and
-ccov
-due
-to
-intermittent
-timeouts
-.
-Bug
-1414126
-.
-"
-os
-=
-=
-'
-win
-'
-&
-&
-(
-debug
-|
-|
-ccov
-)
-"
-#
-Disabled
-on
-Windows
-debug
-and
-ccov
-due
-to
-intermittent
-timeouts
-.
-bug
-1426611
-.
-"
-win11_2009
-&
-&
-bits
-=
-=
-32
+true
 "
 ]
+#
+Bug
+1926118
+:
+Disabled
+until
+the
+test
+can
+be
+revisited
+to
+measure
+performance
+under
+representative
+conditions
+.
 [
 "
 browser_vsync_accessibility
