Bug 1926055 part 2 - add tests for "Unload Tab" context menu r=tabbrowser-reviewers,dao
Differential Revision: https://phabricator.services.mozilla.com/D226347

UltraBlame original commit: 85a555f31920b6030da0b0f9a6f437dcdd48f076

--- a/browser/components/tabbrowser/test/browser/tabs/browser.toml
+++ b/browser/components/tabbrowser/test/browser/tabs/browser.toml
@@ -859,6 +859,20 @@ js
 ]
 [
 "
+browser_multiselect_tabs_unload
+.
+js
+"
+]
+[
+"
+browser_multiselect_tabs_unload_with_beforeunload
+.
+js
+"
+]
+[
+"
 browser_multiselect_tabs_using_Ctrl
 .
 js
