--- a/dom/base/test/fullscreen/browser.toml
+++ b/dom/base/test/fullscreen/browser.toml
@@ -480,3 +480,41 @@ browser_fullscreen_exit_on_external_protocol
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
+&
+&
+opt
+"
+#
+Bug
+1910580
+]
