Bug 1923321 - Apply compiler-rt patches for ASan interception on Windows 11 24H2. r=firefox-build-system-reviewers,ahochheiden
Differential Revision: https://phabricator.services.mozilla.com/D226404

UltraBlame original commit: edffabee1b8d1b045d2f9bca0d072648fe810505

--- a/taskcluster/kinds/toolchain/compiler-rt.yml
+++ b/taskcluster/kinds/toolchain/compiler-rt.yml
@@ -1542,6 +1542,20 @@ clang
 18
 .
 json
+-
+build
+/
+build
+-
+clang
+/
+compiler
+-
+rt
+-
+18
+.
+json
 resources
 :
 -
@@ -1552,6 +1566,20 @@ build
 clang
 /
 clang
+-
+18
+.
+json
+-
+build
+/
+build
+-
+clang
+/
+compiler
+-
+rt
 -
 18
 .
