Bug 1925430 [wpt PR 48689] - Move the Safari GitHub Actions runs to be using sRGB color space, a=testonly
Automatic update from web-platform-tests
[GitHub Actions Safari] Set the display color profile

It remains the case that many tests expect an sRGB color space, so set
the color profile appropriately.

--

wpt-commits: 7139f9ddbdf80411d2b3d77a7668b9483e13ec42
wpt-pr: 48689

UltraBlame original commit: 72bee297b2a18b8c38d506116a7c8e58003107e1

--- a/testing/web-platform/tests/.github/workflows/safari-wptrunner.yml
+++ b/testing/web-platform/tests/.github/workflows/safari-wptrunner.yml
@@ -196,6 +196,25 @@ depth
 -
 name
 :
+Set
+display
+color
+profile
+run
+:
+|
+-
+.
+/
+wpt
+macos
+-
+color
+-
+profile
+-
+name
+:
 Enable
 safaridriver
 diagnostics
