Bug 1925897 [wpt PR 48723] - Update wpt metadata, a=testonly
wpt-pr: 48723
wpt-type: metadata

UltraBlame original commit: c8527d5e45539bf5a3a9155598d0c1a79443af8f

--- a/testing/web-platform/meta/custom-elements/element-internals-aria-element-reflection.html.ini
+++ b/testing/web-platform/meta/custom-elements/element-internals-aria-element-reflection.html.ini
@@ -30,3 +30,19 @@ null
 expected
 :
 FAIL
+[
+Setting
+ariaLabelledByElements
+should
+change
+the
+accessible
+name
+of
+the
+custom
+element
+]
+expected
+:
+FAIL
