Bug 1926070 - [wpt-sync] Update web-platform-tests to 0f0b4b05a7c48b57ac99fadaca1d7220576336a1, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: 0f0b4b05a7c48b57ac99fadaca1d7220576336a1
wpt-type: landing

UltraBlame original commit: 992355ccbda8cfe72918a5730d5646bff17c96bd

--- a/testing/web-platform/meta/digital-credentials/allow-attribute.https.html.ini
+++ b/testing/web-platform/meta/digital-credentials/allow-attribute.https.html.ini
@@ -214,7 +214,10 @@ os
 linux
 "
 :
+[
+FAIL
 TIMEOUT
+]
 if
 os
 =
@@ -271,8 +274,20 @@ mac
 "
 :
 [
-FAIL
 TIMEOUT
+FAIL
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+TIMEOUT
+NOTRUN
 ]
 NOTRUN
 [
@@ -321,8 +336,8 @@ mac
 "
 :
 [
-TIMEOUT
 NOTRUN
+TIMEOUT
 ]
 NOTRUN
 [
