--- a/testing/web-platform/meta/fetch/api/abort/general.any.js.ini
+++ b/testing/web-platform/meta/fetch/api/abort/general.any.js.ini
@@ -658,6 +658,26 @@ closed
 expected
 :
 if
+not
+asan
+and
+not
+fission
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
 asan
 and
 not
