--- a/testing/web-platform/meta/fetch/api/request/request-cache-force-cache.any.js.ini
+++ b/testing/web-platform/meta/fetch/api/request/request-cache-force-cache.any.js.ini
@@ -150,3 +150,51 @@ fission
 PASS
 FAIL
 ]
+[
+RequestCache
+"
+force
+-
+cache
+"
+mode
+checks
+the
+cache
+for
+previously
+cached
+content
+and
+avoid
+revalidation
+for
+stale
+responses
+with
+Last
+-
+Modified
+and
+stale
+response
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+PASS
+FAIL
+]
