--- a/testing/web-platform/meta/mediacapture-record/MediaRecorder-peerconnection.https.html.ini
+++ b/testing/web-platform/meta/mediacapture-record/MediaRecorder-peerconnection.https.html.ini
@@ -1150,6 +1150,139 @@ codecs
 vp8
 opus
 ]
+expected
+:
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+[
+OK
+TIMEOUT
+]
+[
+PeerConnection
+MediaRecorder
+gets
+ondata
+on
+stopping
+tracks
+kinds
+"
+video
+audio
+"
+mimeType
+"
+video
+/
+webm
+;
+codecs
+=
+vp8
+opus
+"
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+[
+PASS
+NOTRUN
+]
+[
+PeerConnection
+MediaRecorder
+receives
+data
+after
+onstart
+kinds
+"
+video
+audio
+"
+mimeType
+"
+video
+/
+webm
+;
+codecs
+=
+vp8
+opus
+"
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+[
+PASS
+TIMEOUT
+]
 [
 MediaRecorder
 -
@@ -1436,4 +1569,58 @@ mimeType
 video
 /
 mp4
+]
+[
+MediaRecorder
+-
+peerconnection
+.
+https
+.
+html
+?
+kinds
+=
+video
+audio
+&
+mimeType
+=
+video
+/
+mp4
+;
+codecs
+=
+av01
+mp4a
+.
+40
+.
+2
+]
+[
+MediaRecorder
+-
+peerconnection
+.
+https
+.
+html
+?
+kinds
+=
+video
+audio
+&
+mimeType
+=
+video
+/
+mp4
+;
+codecs
+=
+av01
+opus
 ]
