--- a/testing/web-platform/meta/notifications/getnotifications-across-processes.https.window.js.ini
+++ b/testing/web-platform/meta/notifications/getnotifications-across-processes.https.window.js.ini
@@ -41,6 +41,28 @@ win
 "
 )
 and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+PASS
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
 not
 debug
 and
@@ -64,10 +86,8 @@ linux
 "
 )
 and
-not
-asan
+debug
 and
-not
 fission
 :
 [
@@ -80,13 +100,20 @@ os
 =
 =
 "
-win
+linux
 "
 )
 and
+not
 debug
+and
+not
+fission
 :
+[
+FAIL
 PASS
+]
 [
 PASS
 FAIL
