--- a/testing/web-platform/meta/partitioned-popins/partitioned-popins.proxy-cross.tentative.sub.https.window.js.ini
+++ b/testing/web-platform/meta/partitioned-popins/partitioned-popins.proxy-cross.tentative.sub.https.window.js.ini
@@ -20,9 +20,6 @@ html
 expected
 :
 if
-not
-asan
-and
 (
 os
 =
@@ -33,26 +30,26 @@ linux
 )
 and
 not
-debug
+tsan
 and
 not
-tsan
+debug
 :
 [
 OK
 TIMEOUT
 ]
 if
-asan
+(
+os
+=
+=
+"
+linux
+"
+)
 and
-fission
-:
-TIMEOUT
-if
-asan
-and
-not
-fission
+tsan
 :
 [
 OK
