--- a/testing/web-platform/meta/webaudio/the-audio-api/the-audioworklet-interface/process-parameters.https.html.ini
+++ b/testing/web-platform/meta/webaudio/the-audio-api/the-audioworklet-interface/process-parameters.https.html.ini
@@ -15,13 +15,63 @@ os
 =
 =
 "
-android
+mac
 "
 )
 and
-fission
+debug
 :
 [
 OK
 TIMEOUT
+]
+[
+3
+inputs
+;
+0
+outputs
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+[
+PASS
+TIMEOUT
+]
+[
+0
+inputs
+;
+3
+outputs
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+[
+PASS
+NOTRUN
 ]
