--- a/testing/web-platform/meta/webcodecs/videoFrame-construction.any.js.ini
+++ b/testing/web-platform/meta/webcodecs/videoFrame-construction.any.js.ini
@@ -446,6 +446,9 @@ expected
 :
 if
 not
+tsan
+and
+not
 asan
 and
 (
@@ -464,7 +467,17 @@ PASS
 FAIL
 ]
 if
+not
+tsan
+and
 asan
+:
+[
+PASS
+FAIL
+]
+if
+tsan
 :
 [
 PASS
