--- a/testing/web-platform/meta/intersection-observer/scroll-margin-not-contained.html.ini
+++ b/testing/web-platform/meta/intersection-observer/scroll-margin-not-contained.html.ini
@@ -23,32 +23,21 @@ os
 =
 =
 "
-linux
+win
 "
 )
-and
-asan
-and
-fission
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-asan
 and
 not
-fission
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 :
 [
 PASS
@@ -65,7 +54,23 @@ linux
 )
 and
 not
+debug
+and
 asan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 debug
 :
