Bug 1878149 - Test deserialization function with filelist for IDB schema upgrades. r=dom-storage-reviewers,janv
Differential Revision: https://phabricator.services.mozilla.com/D224968

UltraBlame original commit: bba88b0824213fdb0b40f5c9d4f180d3050eae36

--- a/dom/indexedDB/test/unit/xpcshell-parent-process.toml
+++ b/dom/indexedDB/test/unit/xpcshell-parent-process.toml
@@ -97,6 +97,11 @@ metadataRestore_profile
 zip
 "
 "
+fileListUpgrade_profile
+.
+zip
+"
+"
 schema18upgrade_profile
 .
 zip
@@ -261,6 +266,13 @@ js
 [
 "
 test_file_copy_failure
+.
+js
+"
+]
+[
+"
+test_fileListUpgrade
 .
 js
 "
