Bug 1917784 - Implement `TrustedTypePolicyFactory`'s `getPropertyType`. r=smaug
Differential Revision: https://phabricator.services.mozilla.com/D225769

UltraBlame original commit: 7bda4dc5eff8e009bb4d8a73e9accc7256756dbf

--- a/testing/web-platform/meta/trusted-types/HTMLElement-generic.html.ini
+++ b/testing/web-platform/meta/trusted-types/HTMLElement-generic.html.ini
@@ -5,9 +5,6 @@ generic
 .
 html
 ]
-expected
-:
-ERROR
 [
 TT
 enabled
@@ -187,6 +184,44 @@ script
 textContent
 =
 String
+on
+a
+non
+-
+connected
+element
+.
+]
+expected
+:
+FAIL
+[
+TT
+enabled
+:
+script
+.
+src
+=
+TrustedScript
+on
+a
+connected
+element
+.
+]
+expected
+:
+FAIL
+[
+TT
+enabled
+:
+script
+.
+src
+=
+TrustedScript
 on
 a
 non
