--- a/testing/web-platform/meta/trusted-types/HTMLElement-generic.html.ini
+++ b/testing/web-platform/meta/trusted-types/HTMLElement-generic.html.ini
@@ -5,6 +5,9 @@ generic
 .
 html
 ]
+expected
+:
+ERROR
 [
 TT
 enabled
@@ -184,44 +187,6 @@ script
 textContent
 =
 String
-on
-a
-non
--
-connected
-element
-.
-]
-expected
-:
-FAIL
-[
-TT
-enabled
-:
-script
-.
-src
-=
-TrustedScript
-on
-a
-connected
-element
-.
-]
-expected
-:
-FAIL
-[
-TT
-enabled
-:
-script
-.
-src
-=
-TrustedScript
 on
 a
 non
