--- a/testing/web-platform/meta/trusted-types/TrustedTypePolicyFactory-getPropertyType.tentative.html.ini
+++ b/testing/web-platform/meta/trusted-types/TrustedTypePolicyFactory-getPropertyType.tentative.html.ini
@@ -12,8 +12,39 @@ sanity
 check
 trustedTypes
 .
+getPropertyType
+for
+the
+HTML
+script
+element
+.
+]
+expected
+:
+FAIL
+[
+sanity
+check
+trustedTypes
+.
 getAttributeType
 .
+]
+expected
+:
+FAIL
+[
+getPropertyType
+tests
+adapted
+from
+w3c
+/
+trusted
+-
+types
+polyfill
 ]
 expected
 :
@@ -34,6 +65,72 @@ expected
 :
 FAIL
 [
+iframe
+.
+srcDoc
+is
+maybe
+defined
+]
+expected
+:
+FAIL
+[
+IFRAME
+.
+srcDoc
+is
+maybe
+defined
+]
+expected
+:
+FAIL
+[
+iFrAmE
+.
+srcDoc
+is
+maybe
+defined
+]
+expected
+:
+FAIL
+[
+iframe
+.
+SRCDOC
+is
+maybe
+defined
+]
+expected
+:
+FAIL
+[
+IFRAME
+.
+SRCDOC
+is
+maybe
+defined
+]
+expected
+:
+FAIL
+[
+iFrAmE
+.
+SRCDOC
+is
+maybe
+defined
+]
+expected
+:
+FAIL
+[
 getPropertyType
 vs
 getAttributeType
@@ -41,21 +138,6 @@ for
 event
 handler
 .
-]
-expected
-:
-FAIL
-[
-ASCII
-case
--
-insensitivity
-of
-tag
-name
-and
-attribute
-parameters
 ]
 expected
 :
