Bug 1925633 - Remove backlog status and enable plaintext-only pref in WPT r=masayuki
Differential Revision: https://phabricator.services.mozilla.com/D226175

UltraBlame original commit: 225d63e189db3626b9f6381faddf548cc515f70d

--- a/testing/web-platform/meta/contenteditable/__dir__.ini
+++ b/testing/web-platform/meta/contenteditable/__dir__.ini
@@ -1,32 +1,17 @@
-#
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1291467
-implementation
--
-status
-:
-backlog
-leak
--
-threshold
+prefs
 :
 [
-default
+dom
+.
+element
+.
+contenteditable
+.
+plaintext
+-
+only
+.
+enabled
 :
-51200
+true
 ]
