Bug 1694789 - Map accessible value for input type color and password. r=dom-core,sefeng,Jamie,bolsson
Differential Revision: https://phabricator.services.mozilla.com/D216042

UltraBlame original commit: a2df642f4dabac0495a5c758546daddf83837ea4

--- a/accessible/tests/mochitest/value/a11y.toml
+++ b/accessible/tests/mochitest/value/a11y.toml
@@ -27,6 +27,13 @@ html
 ]
 [
 "
+test_color
+.
+html
+"
+]
+[
+"
 test_datetime
 .
 html
@@ -49,6 +56,13 @@ html
 [
 "
 test_number
+.
+html
+"
+]
+[
+"
+test_password
 .
 html
 "
