--- a/mobile/android/fenix/app/metrics.yaml
+++ b/mobile/android/fenix/app/metrics.yaml
@@ -9163,6 +9163,103 @@ tags
 :
 -
 Onboarding
+add_on_installed
+:
+type
+:
+event
+description
+:
+|
+User
+installed
+an
+add
+-
+on
+from
+the
+onboarding
+card
+.
+extra_keys
+:
+add_on_id
+:
+type
+:
+string
+description
+:
+|
+The
+id
+of
+add
+-
+on
+that
+was
+installed
+.
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1925327
+data_reviews
+:
+-
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D226033
+data_sensitivity
+:
+-
+interaction
+notification_emails
+:
+-
+android
+-
+probes
+mozilla
+.
+com
+expires
+:
+never
+metadata
+:
+tags
+:
+-
+Onboarding
 set_to_default
 :
 type
