Bug 1926183 - [wpt-sync] Update web-platform-tests to 22916cdea302c4376c19e8fb2a9ed0d9e3f8e272, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: 22916cdea302c4376c19e8fb2a9ed0d9e3f8e272
wpt-type: landing

UltraBlame original commit: 5c37e0e0fba86c50f990101226727932e4f1146c

--- a/testing/web-platform/meta/html/semantics/popovers/popover-events.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-events.html.ini
@@ -23,6 +23,9 @@ popovers
 expected
 :
 if
+not
+debug
+and
 (
 os
 =
@@ -31,12 +34,6 @@ os
 linux
 "
 )
-and
-not
-tsan
-and
-not
-debug
 and
 asan
 and
@@ -48,6 +45,9 @@ FAIL
 PASS
 ]
 if
+not
+debug
+and
 (
 os
 =
@@ -58,16 +58,38 @@ linux
 )
 and
 not
-tsan
+asan
 and
+tsan
+:
+[
+FAIL
+PASS
+]
+if
 not
 debug
 and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
 not
 asan
+and
+not
+tsan
 :
 PASS
 if
+not
+debug
+and
 (
 os
 =
@@ -76,9 +98,6 @@ os
 win
 "
 )
-and
-not
-debug
 and
 (
 processor
@@ -91,6 +110,9 @@ x86
 :
 PASS
 if
+not
+debug
+and
 (
 os
 =
@@ -99,23 +121,6 @@ os
 mac
 "
 )
-and
-not
-debug
-:
-PASS
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
 :
 PASS
 [
@@ -140,6 +145,9 @@ popovers
 expected
 :
 if
+not
+debug
+and
 (
 os
 =
@@ -148,12 +156,6 @@ os
 linux
 "
 )
-and
-not
-tsan
-and
-not
-debug
 and
 asan
 and
@@ -165,6 +167,9 @@ FAIL
 PASS
 ]
 if
+not
+debug
+and
 (
 os
 =
@@ -175,16 +180,38 @@ linux
 )
 and
 not
-tsan
+asan
 and
+tsan
+:
+[
+FAIL
+PASS
+]
+if
 not
 debug
 and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
 not
 asan
+and
+not
+tsan
 :
 PASS
 if
+not
+debug
+and
 (
 os
 =
@@ -193,9 +220,6 @@ os
 win
 "
 )
-and
-not
-debug
 and
 (
 processor
@@ -208,6 +232,9 @@ x86
 :
 PASS
 if
+not
+debug
+and
 (
 os
 =
@@ -216,23 +243,6 @@ os
 mac
 "
 )
-and
-not
-debug
-:
-PASS
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
 :
 PASS
 [
@@ -257,6 +267,9 @@ transition
 expected
 :
 if
+not
+debug
+and
 (
 os
 =
@@ -265,12 +278,6 @@ os
 linux
 "
 )
-and
-not
-tsan
-and
-not
-debug
 and
 asan
 and
@@ -282,6 +289,9 @@ FAIL
 PASS
 ]
 if
+not
+debug
+and
 (
 os
 =
@@ -292,16 +302,38 @@ linux
 )
 and
 not
-tsan
+asan
 and
+tsan
+:
+[
+FAIL
+PASS
+]
+if
 not
 debug
 and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
 not
 asan
+and
+not
+tsan
 :
 PASS
 if
+not
+debug
+and
 (
 os
 =
@@ -310,9 +342,6 @@ os
 win
 "
 )
-and
-not
-debug
 and
 (
 processor
@@ -325,6 +354,9 @@ x86
 :
 PASS
 if
+not
+debug
+and
 (
 os
 =
@@ -333,23 +365,6 @@ os
 mac
 "
 )
-and
-not
-debug
-:
-PASS
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
 :
 PASS
 [
@@ -372,6 +387,9 @@ removal
 expected
 :
 if
+not
+debug
+and
 (
 os
 =
@@ -380,12 +398,6 @@ os
 linux
 "
 )
-and
-not
-tsan
-and
-not
-debug
 and
 asan
 and
@@ -397,6 +409,9 @@ FAIL
 PASS
 ]
 if
+not
+debug
+and
 (
 os
 =
@@ -407,16 +422,38 @@ linux
 )
 and
 not
-tsan
+asan
 and
+tsan
+:
+[
+FAIL
+PASS
+]
+if
 not
 debug
 and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
 not
 asan
+and
+not
+tsan
 :
 PASS
 if
+not
+debug
+and
 (
 os
 =
@@ -425,9 +462,6 @@ os
 win
 "
 )
-and
-not
-debug
 and
 (
 processor
@@ -440,6 +474,9 @@ x86
 :
 PASS
 if
+not
+debug
+and
 (
 os
 =
@@ -448,23 +485,6 @@ os
 mac
 "
 )
-and
-not
-debug
-:
-PASS
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
 :
 PASS
 [
@@ -483,6 +503,9 @@ coalesced
 expected
 :
 if
+not
+debug
+and
 (
 os
 =
@@ -491,12 +514,6 @@ os
 linux
 "
 )
-and
-not
-tsan
-and
-not
-debug
 and
 asan
 and
@@ -508,6 +525,9 @@ FAIL
 PASS
 ]
 if
+not
+debug
+and
 (
 os
 =
@@ -518,16 +538,38 @@ linux
 )
 and
 not
-tsan
+asan
 and
+tsan
+:
+[
+FAIL
+PASS
+]
+if
 not
 debug
 and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
 not
 asan
+and
+not
+tsan
 :
 PASS
 if
+not
+debug
+and
 (
 os
 =
@@ -536,9 +578,6 @@ os
 win
 "
 )
-and
-not
-debug
 and
 (
 processor
@@ -551,6 +590,9 @@ x86
 :
 PASS
 if
+not
+debug
+and
 (
 os
 =
@@ -559,23 +601,6 @@ os
 mac
 "
 )
-and
-not
-debug
-:
-PASS
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
 :
 PASS
 [
