--- a/testing/web-platform/meta/partitioned-popins/partitioned-popins.permission-self.tentative.sub.https.window.js.ini
+++ b/testing/web-platform/meta/partitioned-popins/partitioned-popins.permission-self.tentative.sub.https.window.js.ini
@@ -20,6 +20,27 @@ html
 expected
 :
 if
+not
+asan
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+debug
+and
+fission
+:
+[
+OK
+TIMEOUT
+]
+if
 asan
 :
 [
