--- a/testing/web-platform/meta/webrtc-stats/rtp-stats-creation.html.ini
+++ b/testing/web-platform/meta/webrtc-stats/rtp-stats-creation.html.ini
@@ -53,6 +53,59 @@ win
 "
 )
 and
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+[
+PASS
+FAIL
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+PASS
+NOTRUN
+FAIL
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
 not
 debug
 and
@@ -102,23 +155,6 @@ os
 =
 =
 "
-win
-"
-)
-and
-debug
-:
-[
-PASS
-FAIL
-TIMEOUT
-]
-if
-(
-os
-=
-=
-"
 mac
 "
 )
@@ -155,6 +191,31 @@ present
 ]
 expected
 :
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+FAIL
+NOTRUN
+]
 if
 (
 os
@@ -249,7 +310,6 @@ win
 "
 )
 and
-not
 debug
 and
 (
@@ -257,7 +317,7 @@ processor
 =
 =
 "
-x86_64
+x86
 "
 )
 :
@@ -277,15 +337,6 @@ win
 and
 not
 debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
 :
 [
 PASS
