--- a/testing/web-platform/meta/workers/worker-performance.worker.js.ini
+++ b/testing/web-platform/meta/workers/worker-performance.worker.js.ini
@@ -19,6 +19,32 @@ workers
 expected
 :
 if
+not
+asan
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
 asan
 and
 fission
