--- a/testing/web-platform/meta/fullscreen/api/element-request-fullscreen-timing.html.ini
+++ b/testing/web-platform/meta/fullscreen/api/element-request-fullscreen-timing.html.ini
@@ -48,91 +48,16 @@ linux
 "
 )
 and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
 not
-debug
-and
-fission
-and
 tsan
-:
-FAIL
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-not
-debug
 and
 not
 fission
-:
-FAIL
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-debug
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-win
-"
-)
 and
 not
 debug
 :
-[
-PASS
 FAIL
-]
 if
 (
 os
@@ -151,6 +76,19 @@ FAIL
 PASS
 TIMEOUT
 ]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+tsan
+:
+FAIL
 [
 FAIL
 PASS
@@ -224,20 +162,6 @@ processor
 x86
 "
 )
-:
-PASS
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-not
-debug
 :
 PASS
 [
