--- a/testing/web-platform/meta/workers/Worker-postMessage-happens-in-parallel.https.html.ini
+++ b/testing/web-platform/meta/workers/Worker-postMessage-happens-in-parallel.https.html.ini
@@ -25,6 +25,15 @@ linux
 "
 )
 and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
 not
 debug
 and
@@ -33,6 +42,55 @@ asan
 and
 not
 tsan
+:
+[
+OK
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+OK
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
 :
 [
 OK
