Bug 1926249 - Implement support for desired width/height with WebCodecs ImageDecoder. r=media-playback-reviewers,padenot
Differential Revision: https://phabricator.services.mozilla.com/D226498

UltraBlame original commit: f247d3ce6f616278d9c0b4b7f58cad993e67192a

--- a/dom/media/webcodecs/test/mochitest.toml
+++ b/dom/media/webcodecs/test/mochitest.toml
@@ -51,6 +51,11 @@ bug1921817
 .
 jpg
 "
+"
+green
+.
+png
+"
 ]
 [
 "
@@ -62,6 +67,18 @@ html
 [
 "
 test_bug1921817
+.
+html
+"
+]
+scheme
+=
+"
+https
+"
+[
+"
+test_imageDecoder_desiredSize
 .
 html
 "
