Bug 1873210 - Support langpacks in the crashreporter client r=gsvelto,supply-chain-reviewers
This passes the profile directory as a crash annotation (which is not
sent in the crash report). The profile directory is already indirectly
passed to the crash reporter through
`MOZ_CRASHREPORTER_EVENTS_DIRECTORY`, however I don't think that's
something to rely upon.

The pref parsing and langpack extension search are done on a best-effort
basis; there may be some odd configurations for which it does not
account. However, it should cover the vast majority of cases. While we
don't want to underserve niche populations that may have an odd
configuration, we do always have fallback behaviors that are likely
still reasonable for most (like using the installation locale). We also
first try the `useragent_locale` annotation before getting locales from
the prefs.

This only looks in the profile and the installation for langpack
extensions. There are a few other system-wide locations that Firefox
looks in. However, the assumptions are:
1) overwhelmingly users install langpacks using the UI rather than
   manually downloading the file, and
2) if installed with a package manager (mostly applicable to linux),
   langpacks are put in the installation. This is the case for the few
   major linux distros I checked.

If we think this is not enough, I can also add the system-wide
directories.

Differential Revision: https://phabricator.services.mozilla.com/D222356

UltraBlame original commit: adb24ac8e58e6f5207fb4cec72490121cc4d9e1a

--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -42045,6 +42045,57 @@ delta
 [
 audits
 .
+sys
+-
+locale
+]
+]
+who
+=
+"
+Alex
+Franchuk
+<
+afranchuk
+mozilla
+.
+com
+>
+"
+criteria
+=
+"
+safe
+-
+to
+-
+deploy
+"
+version
+=
+"
+0
+.
+3
+.
+1
+"
+notes
+=
+"
+Succinct
+and
+easily
+-
+verified
+unsafe
+code
+.
+"
+[
+[
+audits
+.
 tempfile
 ]
 ]
