--- a/toolkit/crashreporter/CrashAnnotations.yaml
+++ b/toolkit/crashreporter/CrashAnnotations.yaml
@@ -3508,6 +3508,23 @@ string
 ping
 :
 true
+ProfileDirectory
+:
+description
+:
+>
+The
+directory
+of
+the
+active
+profile
+if
+any
+.
+type
+:
+string
 ProfilerChildShutdownPhase
 :
 description
