Bug 1775543 - Add skip condition to fit frequent failures on browser_bug295977_autoscroll_overflow. r=jmaher DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D226541

UltraBlame original commit: 500fe2376ef3c323cc7c10578be0a6920bc5c576

--- a/toolkit/content/tests/browser/browser.toml
+++ b/toolkit/content/tests/browser/browser.toml
@@ -349,6 +349,38 @@ swgl
 #
 Bug
 1710788
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+socketprocess_networking
+"
+#
+Bug
+1775543
 ]
 [
 "
