Bug 1925409 - Allow creating windows for printing even with coop. r=nika
Differential Revision: https://phabricator.services.mozilla.com/D226466

UltraBlame original commit: 7624273ffd39c1a0571196d25b403f021dcb640a

--- a/toolkit/components/printing/tests/browser.toml
+++ b/toolkit/components/printing/tests/browser.toml
@@ -159,32 +159,6 @@ html
 ]
 [
 "
-browser_preview_print_coop
-.
-js
-"
-]
-support
--
-files
-=
-[
-"
-file_coop_header
-.
-html
-"
-"
-file_coop_header
-.
-html
-^
-headers
-^
-"
-]
-[
-"
 browser_preview_print_link_modulepreload
 .
 js
@@ -213,6 +187,32 @@ js
 browser_print_context_menu
 .
 js
+"
+]
+[
+"
+browser_print_coop
+.
+js
+"
+]
+support
+-
+files
+=
+[
+"
+file_coop_header
+.
+html
+"
+"
+file_coop_header
+.
+html
+^
+headers
+^
 "
 ]
 [
@@ -518,18 +518,5 @@ html
 file_window_print_reentrant
 .
 html
-"
-"
-file_coop_header2
-.
-html
-"
-"
-file_coop_header2
-.
-html
-^
-headers
-^
 "
 ]
