--- a/netwerk/test/browser/browser.toml
+++ b/netwerk/test/browser/browser.toml
@@ -406,6 +406,13 @@ headers
 ^
 "
 "
+simple_unknown_uri_helpers
+.
+sys
+.
+mjs
+"
+"
 x_frame_options
 .
 html
@@ -1001,6 +1008,20 @@ js
 [
 "
 browser_set_response_override
+.
+js
+"
+]
+[
+"
+browser_simple_unknown_uris
+.
+js
+"
+]
+[
+"
+browser_simple_unknown_uris_sync
 .
 js
 "
