Bug 1926090 [wpt PR 48738] - Update wpt metadata, a=testonly
wpt-pr: 48738
wpt-type: metadata

UltraBlame original commit: 28df6e414dc8ec7a57ffe163ea7e0fac0b529a3f

--- a/testing/web-platform/meta/dom/nodes/moveBefore/tentative/Node-moveBefore.html.ini
+++ b/testing/web-platform/meta/dom/nodes/moveBefore/tentative/Node-moveBefore.html.ini
@@ -976,6 +976,20 @@ expected
 FAIL
 [
 moveBefore
+on
+a
+paragraph
+'
+s
+Text
+node
+child
+]
+expected
+:
+FAIL
+[
+moveBefore
 with
 reference
 child
