Bug 1926306 - [wpt-sync] Update web-platform-tests to 21f732681e159d14e24b0a81f1dbcd578130bbca, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: 21f732681e159d14e24b0a81f1dbcd578130bbca
wpt-type: landing

UltraBlame original commit: fe3d16af271bd35e72b771760b7fd1ab64bedd36

--- a/testing/web-platform/meta/css/cssom-view/scroll-behavior-smooth-positions.html.ini
+++ b/testing/web-platform/meta/css/cssom-view/scroll-behavior-smooth-positions.html.ini
@@ -41,44 +41,23 @@ os
 =
 =
 "
-linux
-"
-)
-and
-fission
-:
-[
-PASS
-FAIL
-]
-if
-debug
-and
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-fission
-:
-[
-PASS
-FAIL
-]
-if
-debug
-and
-(
-os
-=
-=
-"
 win
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+debug
+and
+(
+os
+=
+=
+"
+linux
 "
 )
 :
@@ -314,6 +293,49 @@ win
 )
 and
 not
+debug
+:
+[
+PASS
+FAIL
+]
+[
+Scroll
+positions
+when
+performing
+smooth
+scrolling
+from
+(
+1000
+500
+)
+to
+(
+500
+250
+)
+using
+scroll
+(
+)
+]
+expected
+:
+if
+not
+fission
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
 debug
 :
 [
