--- a/testing/web-platform/meta/css/cssom-view/scroll-behavior-subframe-root.html.ini
+++ b/testing/web-platform/meta/css/cssom-view/scroll-behavior-subframe-root.html.ini
@@ -234,3 +234,30 @@ debug
 PASS
 FAIL
 ]
+[
+Subframe
+with
+smooth
+scroll
+-
+behavior
+;
+scrollTo
+(
+)
+with
+default
+behavior
+]
+expected
+:
+if
+not
+fission
+and
+debug
+:
+[
+PASS
+FAIL
+]
