--- a/testing/web-platform/meta/fullscreen/api/element-request-fullscreen-timing.html.ini
+++ b/testing/web-platform/meta/fullscreen/api/element-request-fullscreen-timing.html.ini
@@ -64,6 +64,58 @@ os
 =
 =
 "
+win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
 mac
 "
 )
@@ -103,20 +155,20 @@ expected
 :
 if
 (
-os
-=
-=
-"
-linux
-"
-)
-and
-(
 processor
 =
 =
 "
 x86_64
+"
+)
+and
+(
+os
+=
+=
+"
+linux
 "
 )
 and
@@ -132,6 +184,15 @@ tsan
 PASS
 if
 (
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+(
 os
 =
 =
@@ -146,20 +207,23 @@ debug
 PASS
 if
 (
-os
-=
-=
-"
-linux
-"
-)
-and
-(
 processor
 =
 =
 "
 x86
+"
+)
+and
+not
+debug
+and
+(
+os
+=
+=
+"
+win
 "
 )
 :
