--- a/testing/web-platform/meta/html/browsers/history/the-history-interface/005.html.ini
+++ b/testing/web-platform/meta/html/browsers/history/the-history-interface/005.html.ini
@@ -91,14 +91,17 @@ linux
 "
 )
 and
+fission
+and
+not
 asan
 and
 not
-fission
+tsan
 :
 [
-FAIL
 PASS
+FAIL
 ]
 if
 (
@@ -106,28 +109,42 @@ os
 =
 =
 "
-linux
+mac
 "
 )
 and
-not
-asan
-and
-tsan
+debug
 :
 [
-FAIL
 PASS
+FAIL
 ]
 if
+(
 os
 =
 =
 "
 mac
 "
+)
+and
+not
+debug
 :
 PASS
+if
+os
+=
+=
+"
+win
+"
+:
+[
+PASS
+FAIL
+]
 if
 os
 =
@@ -138,8 +155,8 @@ android
 :
 PASS
 [
-PASS
 FAIL
+PASS
 ]
 [
 window
@@ -276,26 +293,6 @@ id
 1692852
 expected
 :
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-fission
-and
-not
-debug
-:
-[
-FAIL
-PASS
-]
 if
 (
 os
