--- a/testing/web-platform/meta/html/semantics/scripting-1/the-script-element/execution-timing/079.html.ini
+++ b/testing/web-platform/meta/html/semantics/scripting-1/the-script-element/execution-timing/079.html.ini
@@ -3,21 +3,25 @@
 .
 html
 ]
+[
+setting
+location
+to
+javascript
+URL
+from
+event
+handler
+]
 expected
 :
 if
-(
-os
-=
-=
-"
-android
-"
-)
+asan
 and
+not
 fission
 :
 [
-OK
-TIMEOUT
+PASS
+FAIL
 ]
