--- a/testing/web-platform/meta/intersection-observer/scroll-margin-not-contained.html.ini
+++ b/testing/web-platform/meta/intersection-observer/scroll-margin-not-contained.html.ini
@@ -23,6 +23,65 @@ os
 =
 =
 "
+linux
+"
+)
+and
+not
+tsan
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
+debug
+and
+asan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+tsan
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
 win
 "
 )
@@ -53,26 +112,7 @@ linux
 "
 )
 and
-not
-debug
-and
-asan
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-debug
+tsan
 :
 [
 PASS
