--- a/testing/web-platform/meta/css/css-highlight-api/painting/custom-highlight-painting-invalidation-007.html.ini
+++ b/testing/web-platform/meta/css/css-highlight-api/painting/custom-highlight-painting-invalidation-007.html.ini
@@ -23,25 +23,97 @@ linux
 "
 )
 and
-not
-tsan
-and
-not
-asan
-and
 fission
 and
 not
 swgl
+and
+not
+debug
+and
+not
+asan
+and
+not
+tsan
 :
 FAIL
 if
+(
 os
 =
 =
 "
 win
 "
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+swgl
+:
+FAIL
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+fission
+and
+not
+swgl
+and
+debug
+:
+FAIL
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+FAIL
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
 :
 FAIL
 if
