--- a/testing/web-platform/meta/fetch/api/request/request-cache-default.any.js.ini
+++ b/testing/web-platform/meta/fetch/api/request/request-cache-default.any.js.ini
@@ -23,6 +23,57 @@ any
 html
 ]
 [
+RequestCache
+"
+default
+"
+mode
+checks
+the
+cache
+for
+previously
+cached
+content
+and
+avoids
+going
+to
+the
+network
+if
+a
+fresh
+response
+exists
+with
+Last
+-
+Modified
+and
+fresh
+response
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+PASS
+FAIL
+]
+[
 request
 -
 cache
