--- a/testing/web-platform/meta/partitioned-popins/popinContextType.in-popin.tentative.https.window.js.ini
+++ b/testing/web-platform/meta/partitioned-popins/popinContextType.in-popin.tentative.https.window.js.ini
@@ -13,6 +13,28 @@ window
 .
 html
 ]
+expected
+:
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+debug
+and
+not
+asan
+and
+not
+tsan
+:
+TIMEOUT
 [
 Verify
 PopinContextType
