--- a/testing/web-platform/meta/print/crashtests/reload-crash.html.ini
+++ b/testing/web-platform/meta/print/crashtests/reload-crash.html.ini
@@ -18,6 +18,48 @@ android
 )
 and
 debug
+and
+not
+fission
+and
+swgl
+:
+[
+PASS
+ERROR
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+debug
+and
+not
+fission
+and
+not
+swgl
+:
+PASS
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+debug
+and
+fission
 :
 PASS
 if
