Backed out 2 changesets (bug 1889988) for xpcshell failures on test_getPasswordOrigin. CLOSED TREE
Backed out changeset db199aeaafd8 (bug 1889988)
Backed out changeset 360a3d2b1200 (bug 1889988)

UltraBlame original commit: 61f7d9c0998e2ce8008cd15b187f86dfdba21a26

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -83898,7 +83898,7 @@ type
 RelaxedAtomicBool
 value
 :
-true
+false
 mirror
 :
 always
@@ -83922,7 +83922,7 @@ network
 .
 url
 .
-simple_uri_unknown_schemes_enabled
+some_schemes_bypass_defaultURI_fallback
 type
 :
 RelaxedAtomicBool
@@ -83954,7 +83954,7 @@ network
 .
 url
 .
-simple_uri_unknown_schemes_enabled
+some_schemes_bypass_defaultURI_fallback
 is
 true
 -
@@ -83964,7 +83964,7 @@ network
 .
 url
 .
-simple_uri_unknown_schemes
+simple_uri_schemes
 type
 :
 String
