--- a/netwerk/test/unit_ipc/xpcshell.toml
+++ b/netwerk/test/unit_ipc/xpcshell.toml
@@ -970,7 +970,7 @@ test
 /
 unit
 /
-test_simple_unknown_uris
+test_default_uri_bypass
 .
 js
 "
@@ -1909,24 +1909,6 @@ true
 ]
 [
 "
-test_simple_unknown_uris_wrap
-.
-js
-"
-]
-prefs
-=
-[
-"
-network
-.
-allow_raw_sockets_in_content_processes
-=
-true
-"
-]
-[
-"
 test_simple_wrap
 .
 js
@@ -2003,6 +1985,24 @@ android
 [
 "
 test_xmlhttprequest_wrap
+.
+js
+"
+]
+prefs
+=
+[
+"
+network
+.
+allow_raw_sockets_in_content_processes
+=
+true
+"
+]
+[
+"
+test_default_uri_bypass_wrap
 .
 js
 "
