Bug 1926414 - add a pref to make CRLite coverage checks more strict. r=keeler
Differential Revision: https://phabricator.services.mozilla.com/D226559

UltraBlame original commit: 5a6e5a234f119f09f824293421d665e3213d224b

--- a/security/manager/ssl/cert_storage/Cargo.toml
+++ b/security/manager/ssl/cert_storage/Cargo.toml
@@ -247,6 +247,33 @@ sha2
 .
 2
 "
+static_prefs
+=
+{
+path
+=
+"
+.
+.
+/
+.
+.
+/
+.
+.
+/
+.
+.
+/
+modules
+/
+libpref
+/
+init
+/
+static_prefs
+"
+}
 storage_variant
 =
 {
