--- a/toolkit/components/nimbus/FeatureManifest.yaml
+++ b/toolkit/components/nimbus/FeatureManifest.yaml
@@ -23199,6 +23199,43 @@ will
 be
 interpreted
 .
+timestamps_for_coverage
+:
+type
+:
+int
+setPref
+:
+branch
+:
+default
+pref
+:
+security
+.
+pki
+.
+crlite_timestamps_for_coverage
+description
+:
+>
+-
+How
+many
+covered
+timestamps
+do
+we
+need
+to
+see
+before
+we
+enforce
+a
+CRLite
+result
+.
 chatbot
 :
 description
