--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -96379,6 +96379,52 @@ endif
 mirror
 :
 never
+#
+The
+number
+of
+SCTs
+that
+must
+be
+"
+covered
+"
+by
+a
+CRLite
+filter
+before
+#
+we
+will
+enforce
+a
+result
+from
+that
+filter
+.
+-
+name
+:
+security
+.
+pki
+.
+crlite_timestamps_for_coverage
+type
+:
+RelaxedAtomicUint32
+value
+:
+1
+mirror
+:
+always
+rust
+:
+true
 -
 name
 :
